--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="app-wrapper hidden">
         <div class="app-container">
             <div class="sidebar" id="sidebar">
-                 <div class="sidebar-header"><i class="fas fa-briefcase"></i><div class="sidebar-logo">Job Tracker Pro</div></div>
+                 <div class="sidebar-header"><i class="fas fa-briefcase"></i><div class="sidebar-logo">Tracker </div></div>
                  <nav class="sidebar-nav">
                    <button class="nav-item active" onclick="showPage('dashboard')" data-page="dashboard"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></button>
                    <button class="nav-item" onclick="showPage('applications')" data-page="applications"><i class="fas fa-clipboard-list"></i><span>Applications</span></button>
