--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auly Job Application Tracker </title>
+    <title>Auly|Tracker </title>
     <link rel="icon" type="image/png" href="work-logo.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
     <div id="authPage">
         <div class="auth-container animate__animated animate__fadeInUp">
             <form id="loginForm" class="auth-form">
-                <h2 class="auth-title">Login to Job Tracker</h2>
+                <h2 class="auth-title">Login Tracker</h2>
                 <div id="loginError" class="auth-error"></div>
                 <div class="form-group"><label class="form-label" for="loginUsername">Username</label><input type="text" id="loginUsername" class="form-input" required></div>
                 
